// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders the data from NEWHOPE 1`] = `
<div>
  <div>
    Loading
  </div>
</div>
`;

exports[`CharacterWithoutData handles a loading state 1`] = `
<div>
  Loading
</div>
`;

exports[`CharacterWithoutData handles an error state 1`] = `
<h1>
  ERROR
</h1>
`;

exports[`CharacterWithoutData renders a full data result 1`] = `
<div>
  <div>
    <h3>
      r2d2
    </h3>
    <h6>
      luke
      : 
      newhope
    </h6>
  </div>
</div>
`;

exports[`CharacterWithoutData returns markup for a friend without an appearsIn 1`] = `
<div>
  <div>
    <h3>
      r2d2
    </h3>
    <h6>
      luke
      : 
      newhope
    </h6>
    <h6>
      james
      : 
      
    </h6>
  </div>
</div>
`;

exports[`CharacterWithoutData returns markup for a hero with no friends 1`] = `
<div>
  <div>
    <h3>
      r2d2
    </h3>
  </div>
</div>
`;

exports[`CharacterWithoutData returns markup for empty array of friends 1`] = `
<div>
  <div>
    <h3>
      r2d2
    </h3>
  </div>
</div>
`;

exports[`CharacterWithoutData returns markup for null response 1`] = `<div />`;
